updated source files

--- a/.themes/whatsup/sass/base/_layout.scss
+++ b/.themes/whatsup/sass/base/_layout.scss
@@ -139,7 +139,7 @@ body.sidebar-footer {
   }
   #content {
     overflow: visible;
-    margin-right: $sidebar-width-medium;
+    margin-left: $sidebar-width-medium;
     position: relative;
     .no-sidebar & { margin-right: 0; border-right: 0; }
     .collapse-sidebar & { margin-right: 20px; }
