updated source files

--- a/source/_includes/asides/page_links.html
+++ b/source/_includes/asides/page_links.html
@@ -8,6 +8,8 @@
      <li class="post"><a href="/application/basics">Application Basics</a></li>
      <li class="post"><a href="/application/models">Creating Models</a></li>
      <li class="post"><a href="/application/data-manipulation">Common Database Operations</a></li>
-     <li class="post"><a href="/application/web-forms">Creating Forms</a></li>
+     <li class="post"><a href="/application/how-tos">Mostly Used Stuff</a></li>
+     <li class="post"><a href="/application/routes">Creating Routes</a></li>
+     <li class="post"><a href="/application/hmvc">HMVC requests</a></li>
   </ul>
 </section>
